--- a/wip/hearsay/hearsay/Base.lproj/Main.storyboard
+++ b/wip/hearsay/hearsay/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Qi-F6-Ig7">
-                                            <rect key="frame" x="10" y="15" width="354" height="18"/>
+                                            <rect key="frame" x="10" y="15" width="329" height="18"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="18" id="tbi-53-on0"/>
                                             </constraints>
@@ -37,7 +37,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XQ3-G8-c6z">
-                                            <rect key="frame" x="10" y="37" width="354" height="16"/>
+                                            <rect key="frame" x="10" y="37" width="329" height="16"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="16" id="MwR-iz-z4n"/>
                                             </constraints>
@@ -46,20 +46,20 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NJq-IH-yeC">
-                                            <rect key="frame" x="10" y="61" width="354" height="16.5"/>
+                                            <rect key="frame" x="10" y="61" width="329" height="16.5"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="NJq-IH-yeC" secondAttribute="trailing" constant="50" id="1yD-xV-9yF"/>
                                         <constraint firstItem="9Qi-F6-Ig7" firstAttribute="leading" secondItem="hq1-um-klO" secondAttribute="leading" constant="10" id="22U-vU-3gG"/>
                                         <constraint firstItem="XQ3-G8-c6z" firstAttribute="leading" secondItem="hq1-um-klO" secondAttribute="leading" constant="10" id="4a8-x5-kcD"/>
-                                        <constraint firstAttribute="trailing" secondItem="XQ3-G8-c6z" secondAttribute="trailing" constant="50" id="NDM-rd-ClX"/>
-                                        <constraint firstAttribute="trailing" secondItem="9Qi-F6-Ig7" secondAttribute="trailing" constant="50" id="QEM-kL-VNZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="NJq-IH-yeC" secondAttribute="trailing" constant="75" id="e0U-dO-U80"/>
+                                        <constraint firstAttribute="trailing" secondItem="XQ3-G8-c6z" secondAttribute="trailing" constant="75" id="fHp-LZ-29v"/>
                                         <constraint firstItem="9Qi-F6-Ig7" firstAttribute="top" secondItem="hq1-um-klO" secondAttribute="top" constant="15" id="h0H-JD-6mO"/>
                                         <constraint firstItem="NJq-IH-yeC" firstAttribute="leading" secondItem="hq1-um-klO" secondAttribute="leading" constant="10" id="jbx-H0-ewx"/>
+                                        <constraint firstAttribute="trailing" secondItem="9Qi-F6-Ig7" secondAttribute="trailing" constant="75" id="mdH-GT-0vw"/>
                                         <constraint firstItem="NJq-IH-yeC" firstAttribute="top" secondItem="XQ3-G8-c6z" secondAttribute="bottom" constant="8" id="vfc-zv-pVp"/>
                                         <constraint firstItem="XQ3-G8-c6z" firstAttribute="top" secondItem="9Qi-F6-Ig7" secondAttribute="bottom" constant="4" id="ya3-dt-pNA"/>
                                     </constraints>
@@ -156,19 +156,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YLh-xe-jUo">
-                                <rect key="frame" x="20" y="20" width="344" height="21.5"/>
+                                <rect key="frame" x="20" y="20" width="319" height="21.5"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-BoldItalic" family="Helvetica Neue" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TmU-oo-B5g">
-                                <rect key="frame" x="20" y="49.5" width="344" height="21"/>
+                                <rect key="frame" x="20" y="49.5" width="319" height="21"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSB-4Q-B4g">
-                                <rect key="frame" x="20" y="85.5" width="344" height="19"/>
+                                <rect key="frame" x="20" y="85.5" width="319" height="19"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -176,15 +176,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="5ER-K5-yWk" firstAttribute="trailing" secondItem="cSB-4Q-B4g" secondAttribute="trailing" constant="50" id="0jC-V2-GCg"/>
-                            <constraint firstItem="5ER-K5-yWk" firstAttribute="trailing" secondItem="TmU-oo-B5g" secondAttribute="trailing" constant="50" id="SF7-dr-zaM"/>
+                            <constraint firstItem="5ER-K5-yWk" firstAttribute="trailing" secondItem="YLh-xe-jUo" secondAttribute="trailing" constant="75" id="EEb-Bo-WTW"/>
+                            <constraint firstItem="5ER-K5-yWk" firstAttribute="trailing" secondItem="TmU-oo-B5g" secondAttribute="trailing" constant="75" id="FSL-eM-vB1"/>
+                            <constraint firstItem="5ER-K5-yWk" firstAttribute="trailing" secondItem="cSB-4Q-B4g" secondAttribute="trailing" constant="75" id="ITf-9F-EvW"/>
                             <constraint firstItem="TmU-oo-B5g" firstAttribute="leading" secondItem="5ER-K5-yWk" secondAttribute="leading" constant="20" id="TZx-9O-OeE"/>
                             <constraint firstItem="YLh-xe-jUo" firstAttribute="leading" secondItem="5ER-K5-yWk" secondAttribute="leading" constant="20" id="W40-Vr-yFg"/>
                             <constraint firstItem="TmU-oo-B5g" firstAttribute="top" secondItem="YLh-xe-jUo" secondAttribute="bottom" constant="8" id="brA-pt-LFq"/>
                             <constraint firstItem="cSB-4Q-B4g" firstAttribute="top" secondItem="TmU-oo-B5g" secondAttribute="bottom" constant="15" id="lbL-nB-3gC"/>
                             <constraint firstItem="cSB-4Q-B4g" firstAttribute="leading" secondItem="5ER-K5-yWk" secondAttribute="leading" constant="20" id="moL-Ds-hUg"/>
                             <constraint firstItem="YLh-xe-jUo" firstAttribute="top" secondItem="5ER-K5-yWk" secondAttribute="top" constant="20" id="tkT-WI-35w"/>
-                            <constraint firstItem="5ER-K5-yWk" firstAttribute="trailing" secondItem="YLh-xe-jUo" secondAttribute="trailing" constant="50" id="x3D-Jx-BBw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5ER-K5-yWk"/>
                     </view>
